k8s-apps/atlantis/templates/webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis-webhook-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: home.terence.cloud
spec:
  ingressClassName: nginx
  rules:
    - host: atlantis.terence.cloud
      http:
        paths:
          - backend:
              service:
                name: atlantis
                port:
                  name: atlantis
            path: /events
            pathType: ImplementationSpecific
